working with own data inside streaming operation