@@ -1,5 +1,6 @@
 package data.ENUMS;
 
+import java.util.Collections;
 import java.util.List;
 
 public enum HeroWeapons {
@@ -7,7 +8,8 @@ public enum HeroWeapons {
     MAGIC_WEAPONS(List.of("Wand","Rod","SpellBook","Stuff")),
     MELEE_WEAPON(List.of("Axe","Club","Hammer","Sword")),
     RANGE_WEAPON(List.of("Spear","Bow","Crossbow","Shuriken")),
-    SUPPORT_WEAPON(List.of("Scepter","Healing Cross","Bell", "Fan"));
+    SUPPORT_WEAPON(List.of("Scepter","Healing Cross","Bell", "Fan")),
+    NO_WEAPON(Collections.singletonList("Hands"));
 
     private final List<String> weapons;
 
